--- a/src/user/profile/Profile.css
+++ b/src/user/profile/Profile.css
@@ -46,13 +46,12 @@
 .user-summary .full-name {
     font-size: 30px;
     font-weight: 600;
-    color: rgba(0,0,0,0.85);
     text-overflow: ellipsis;
     overflow: hidden;
     white-space: nowrap;
 }
 
-.user-summary .username {
+.user-summary .username .email{
     font-size: 20px;
 }
 
@@ -63,6 +62,7 @@
 @media (max-width: 768px) {
     .user-summary .full-name {
         font-size: 24px;
-    }    
+    }
+
 }
 
